--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - partitions
+    - optparse-generic
 
 tests:
   partitions-test:
@@ -46,3 +47,5 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - partitions
+    - tasty
+    - tasty-hunit
